--- a/pages/04.notice/02.popup.html
+++ b/pages/04.notice/02.popup.html
@@ -214,11 +214,11 @@
               </div>
               <div class="filter-cell__contents">
                 <div class="form-group">
-                  시작일:&nbsp;
+                  <span class="form-label">시작일:&nbsp;</span>
                   <span class="form-datepicker">
                     <input type="text" class="datepicker">
                   </span>
-                  <span>&nbsp;~ 종료일: </span>
+                  <span class="form-label">&nbsp;~ 종료일:&nbsp;</span>
                   <span class="form-datepicker">
                     <input type="text" class="datepicker">
                   </span>
