--- a/pages/01.manage/03.group_menu.html
+++ b/pages/01.manage/03.group_menu.html
@@ -55,12 +55,12 @@
               <span class="doc-nav__text">사용자 정보관리</span>
             </a>
           </div>
-          <div class="doc-nav__2depth doc-nav__2depth--is-active">
+          <div class="doc-nav__2depth">
             <a class="doc-nav__link" href="/pages/01.manage/02.manage.html">
               <span class="doc-nav__text">관리자 정보관리</span>
             </a>
           </div>
-          <div class="doc-nav__2depth">
+          <div class="doc-nav__2depth doc-nav__2depth--is-active">
             <a class="doc-nav__link" href="/pages/01.manage/03.group_menu.html">
               <span class="doc-nav__text">그룹별 메뉴관리</span>
             </a>
@@ -179,10 +179,10 @@
             <a href="" class="breadcrumb__link">사용자관리</a>
 
             <span class="breadcrumb__arrow"><i class="fas fa-chevron-right"></i></span>
-            <a href="" class="breadcrumb__link">관리자정보 관리</a>
+            <a href="" class="breadcrumb__link">그룹별 메뉴관리</a>
           </nav>
 
-          <h2 class="page-title">관리자정보 관리</h2>
+          <h2 class="page-title">그룹별 메뉴관리</h2>
 
           <section class="page-section">
             <h3 class="page-section__title">콩 내역</h3>
