--- a/pages/05.statistics/02.enter.html
+++ b/pages/05.statistics/02.enter.html
@@ -60,6 +60,11 @@
               <span class="doc-nav__text">관리자 정보관리</span>
             </a>
           </div>
+          <div class="doc-nav__2depth">
+            <a class="doc-nav__link" href="/pages/01.manage/03.group_menu.html">
+              <span class="doc-nav__text">그룹별 메뉴관리</span>
+            </a>
+          </div>
         </div>
 
         <div class="doc-nav__1depth  ">
