--- a/pages/05.statistics/01.user.html
+++ b/pages/05.statistics/01.user.html
@@ -329,6 +329,12 @@
               </div>
             </div>
           </div>
+
+          <div class="button-group">
+            <div class="button-group--position-right">
+              <button type="button" class="button button--outline-primary">조회</button>
+            </div>
+          </div>
         </section>
 
         <section class="page-section">
