메뉴권한관리 업데이트

--- a/pages/01.manage/03.group_menu.html
+++ b/pages/01.manage/03.group_menu.html
@@ -225,8 +225,8 @@
               <span class="organization-box-header-cell">메뉴권한여부</span>
               <span class="organization-box-header-cell">조회만 가능</span>
             </div>
-            <div class="organization">
-              <div class="organization-box">
+            <div class="organization" style="height: unset;">
+              <div class="organization-box" style="flex: 1 1 auto;">
                 <!-- 조직도 트리 -->
                 <div class="organization-tree">
                   <ul class="organization-tree__list">
@@ -325,31 +325,13 @@
                 </div>
                 <!-- 조직도 트리 -->
 
+                <div class="button-group">
+                  <div class="button-group--position-right">
+                    <button type="button" class="button button--outline-primary">저장</button>
+                  </div>
+                </div>
               </div>
             </div>
-
-
-            <div class="pagenation">
-              <a class="pagenation-item pagenation-item--type-arrow" href="#"><i class="fas fa-angle-double-left"></i></a>
-              <a class="pagenation-item pagenation-item--type-arrow" href="#"><i class="fas fa-angle-left"></i></a>
-  
-  
-              <a class="pagenation-item pagenation-item--is-active" href="#">1</a>
-              <a class="pagenation-item" href="#">2</a>
-              <a class="pagenation-item" href="#">3</a>
-              <a class="pagenation-item" href="#">4</a>
-              <a class="pagenation-item" href="#">5</a>
-              <a class="pagenation-item" href="#">6</a>
-              <a class="pagenation-item" href="#">7</a>
-              <a class="pagenation-item" href="#">8</a>
-              <a class="pagenation-item" href="#">9</a>
-              <a class="pagenation-item" href="#">10</a>
-  
-  
-              <a class="pagenation-item pagenation-item--type-arrow" href="#"><i class="fas fa-angle-right"></i></a>
-              <a class="pagenation-item pagenation-item--type-arrow" href="#"><i class="fas fa-angle-double-right"></i></a>
-            </div>
-
 
           </section>
 
