--- a/pages/02.kong/01.kongsetting.html
+++ b/pages/02.kong/01.kongsetting.html
@@ -439,7 +439,7 @@
                   <td>달콩(받은 콩) 가능 직위</td>
                   <td>
                     <span>은행장, 임원, 부장, 지점장, 과장, 심사역…</span>
-                    <button class="button" type="button">변경</button>
+                    <button class="button" type="button" data-layer="#popupRole">변경</button>
                   </td>
                   <td></td>
                   <td>
